appId: foam-tv-e2e
name: "Browse Categories"
tags:
  - browse
  - categories
---

- launchApp:
    clearState: true

- runFlow:
    when:
      visible: "Development Build"
    file: ../utils/handle-dev-client.yml

- extendedWaitUntil:
    visible: "Top|Following"
    timeout: 20000

- tapOn:
    text: "Top"

- extendedWaitUntil:
    visible: "Streams|Categories"
    timeout: 10000

- tapOn:
    text: "Categories"

- extendedWaitUntil:
    visible: ".*Just Chatting.*"
    timeout: 10000
    optional: true

- scroll

- takeScreenshot: "categories-list"
